# seatingchart

./: .gitconfig  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  seatingchart.py
.github/workflows/: build.yaml
tests/: strategies.py  test_seatingchart.py
