[tool.poetry]
name = "seatingchart"
version = "0.1.0"
description = ""
authors = ["Ryan Opel <ryan.a.opell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
