[tool.poetry]
name = "seatingchart"
version = "0.1.0"
description = ""
authors = ["Ryan Opel <ryan.a.opell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
hypothesis = "^5.5.1"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
